--- a/laiqu/src/main/res/layout/activity_seting_layout.xml
+++ b/laiqu/src/main/res/layout/activity_seting_layout.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_seting_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_F6F6F6"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -34,14 +34,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_1000px"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/seting_person_data"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_120px"
+            android:layout_height="@dimen/dimen_160px"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
             android:layout_weight="1"
@@ -71,7 +71,7 @@
         <TextView
             android:id="@+id/seting_person_account_safe"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_120px"
+            android:layout_height="@dimen/dimen_160px"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
             android:layout_weight="1"
@@ -101,12 +101,12 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="@dimen/dimen_160px">
 
             <TextView
                 android:id="@+id/seting_person_real_name_authentication"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_120px"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/dimen_40px"
                 android:layout_marginRight="@dimen/dimen_40px"
                 android:layout_weight="1"
@@ -116,10 +116,8 @@
                 android:drawablePadding="@dimen/dimen_20px"
                 android:drawableRight="@mipmap/ic_right_large_arrows"
                 android:gravity="center_vertical"
-                android:paddingBottom="@dimen/dimen_20px"
                 android:paddingLeft="@dimen/dimen_20px"
                 android:paddingRight="@dimen/dimen_20px"
-                android:paddingTop="@dimen/dimen_20px"
                 android:text="@string/real_name_authentication"
                 android:textColor="@color/textGrayDeep"
                 android:textSize="@dimen/dimen_54px" />
@@ -145,26 +143,42 @@
             android:layout_marginTop="@dimen/dimen_10px"
             android:background="@color/wait_for_pay_line_color"></View>
 
-        <TextView
-            android:id="@+id/seting_person_new_notifications"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_120px"
-            android:layout_marginLeft="@dimen/dimen_40px"
-            android:layout_marginRight="@dimen/dimen_40px"
-            android:layout_weight="1"
-            android:background="@drawable/fragment_person_mine_dinner_select"
-            android:clickable="true"
-            android:contentDescription="新消息提醒"
-            android:drawablePadding="@dimen/dimen_20px"
-            android:drawableRight="@mipmap/ic_right_large_arrows"
-            android:gravity="center_vertical"
-            android:paddingBottom="@dimen/dimen_20px"
-            android:paddingLeft="@dimen/dimen_20px"
-            android:paddingRight="@dimen/dimen_20px"
-            android:paddingTop="@dimen/dimen_20px"
-            android:text="@string/new_notifications"
-            android:textSize="@dimen/dimen_54px" />
+            android:layout_height="@dimen/dimen_160px">
 
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dimen_40px"
+                android:layout_marginRight="@dimen/dimen_40px"
+                android:layout_weight="1"
+                android:background="@drawable/fragment_person_mine_dinner_select"
+                android:clickable="true"
+                android:contentDescription="新消息提醒"
+                android:drawablePadding="@dimen/dimen_20px"
+                android:drawableRight="@mipmap/ic_right_large_arrows"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/dimen_20px"
+                android:paddingRight="@dimen/dimen_20px"
+                android:text="@string/new_notifications"
+                android:textColor="@color/textGrayDeep"
+                android:textSize="@dimen/dimen_54px" />
+
+            <com.qbgg.cenglaicengqu.main.widget.SwitchButton
+                android:id="@+id/seting_person_new_notifications_swithch"
+                android:layout_width="@dimen/dimen_140px"
+                android:layout_height="@dimen/dimen_80px"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dimen_150px"
+                app:checked="true"
+                app:close_color="@color/switch_button_close_color"
+                app:open_color="@color/switch_button_color" />
+
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
@@ -175,26 +189,43 @@
             android:layout_marginTop="@dimen/dimen_10px"
             android:background="@color/wait_for_pay_line_color"></View>
 
-        <TextView
-            android:id="@+id/seting_person_clean_cache"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_120px"
-            android:layout_marginLeft="@dimen/dimen_40px"
-            android:layout_marginRight="@dimen/dimen_40px"
-            android:layout_weight="1"
-            android:background="@drawable/fragment_person_mine_dinner_select"
-            android:clickable="true"
-            android:contentDescription="清理缓存"
-            android:drawablePadding="@dimen/dimen_20px"
-            android:drawableRight="@mipmap/ic_right_large_arrows"
-            android:gravity="center_vertical"
-            android:paddingBottom="@dimen/dimen_20px"
-            android:paddingLeft="@dimen/dimen_20px"
-            android:paddingRight="@dimen/dimen_20px"
-            android:paddingTop="@dimen/dimen_20px"
-            android:text="@string/clean_cache"
-            android:textSize="@dimen/dimen_54px" />
+            android:layout_height="@dimen/dimen_160px">
 
+            <TextView
+                android:id="@+id/seting_person_clean_cache"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dimen_40px"
+                android:layout_marginRight="@dimen/dimen_40px"
+                android:layout_weight="1"
+                android:background="@drawable/fragment_person_mine_dinner_select"
+                android:clickable="true"
+                android:contentDescription="清理缓存"
+                android:drawablePadding="@dimen/dimen_20px"
+                android:drawableRight="@mipmap/ic_right_large_arrows"
+                android:gravity="center_vertical"
+
+                android:paddingLeft="@dimen/dimen_20px"
+                android:paddingRight="@dimen/dimen_20px"
+
+                android:text="@string/clean_cache"
+                android:textColor="@color/textGrayDeep"
+                android:textSize="@dimen/dimen_54px" />
+
+            <TextView
+                android:id="@+id/seting_person_clean_cache_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dimen_150px"
+                android:text="当前缓存12M"
+                android:textColor="@color/red_bg"
+                android:textSize="@dimen/dimen_40px" />
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
@@ -209,7 +240,7 @@
         <TextView
             android:id="@+id/seting_person_about_app"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_120px"
+            android:layout_height="@dimen/dimen_160px"
             android:layout_marginBottom="@dimen/dimen_20px"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
@@ -220,11 +251,13 @@
             android:drawablePadding="@dimen/dimen_20px"
             android:drawableRight="@mipmap/ic_right_large_arrows"
             android:gravity="center_vertical"
+
             android:paddingBottom="@dimen/dimen_20px"
             android:paddingLeft="@dimen/dimen_20px"
             android:paddingRight="@dimen/dimen_20px"
             android:paddingTop="@dimen/dimen_20px"
             android:text="@string/about_app"
+            android:textColor="@color/textGrayDeep"
             android:textSize="@dimen/dimen_54px" />
 
 
@@ -243,7 +276,7 @@
             android:layout_centerInParent="true"
             android:layout_marginLeft="@dimen/dimen_60px"
             android:layout_marginRight="@dimen/dimen_60px"
-            android:background="@drawable/publish_add_nextstep_selector"
+            android:background="@drawable/taste_preference_confirm_select"
             android:clickable="true"
             android:contentDescription="退出登录"
             android:gravity="center"
